examples/datalog/17_rule_commands/16_rule_drop_then_add.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_drop_add
Knowledge graph 'test_drop_add' created.
Switched to knowledge graph: test_drop_add
> .kg use test_drop_add
Switched to knowledge graph: test_drop_add
> +items[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'items'.
> +doubled(X, Y) :- items(X), Y = X * 2.
Script error: Failed to register rule: Unsafe rule 'doubled': Head variable(s) Y not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
